# OrzClick

./: .gitignore  CMakeLists.txt  Readme.org  build.sh  stub.php  value.h
bench/: README.org  bench-insert.sh  bench-select.sh  clear-insert-table.php  config.php  create-data.php  insert-orzclick-columnar.php  insert-orzclick-indexed.php  insert-orzclick.php  insert-seasclick-block.php  insert-seasclick.php  result-insert.txt  result-select.txt  select-mysql.php  select-orzclick.php  select-seasclick.php
src/: Client.cpp  Client.h  ClientOptions.cpp  ClientOptions.h  Columns.cpp  Columns.h  FetchColumn.cpp  common.h  lib.cpp
tests/: array.php  enums.php  ip.php  nullable.php  ping.php  string.php  test.php  tuple.php
